welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:2: error: not found: value ciagrs
	if (((cigars >= 40 && cigars <= 60) && !(isWeekend)) || (ciagrs >= 40 && isWeekend)){
                                                                 ^